--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION " />
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>  <!-- for state of network for play services -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!--for saving the data  when maps are downloaded.-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- for state of network for play services -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Group02_comp304_lab05"
         tools:targetApi="31">
-
+        <activity
+            android:name=".RestaurantActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
              To get one, follow the directions here:
